[package]
name = "solana_meme_prediction"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
serde_json = "1.0"
log = "0.4"
env_logger = "0.9"
rand = "0.8"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
